1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h, FCall.[hm]: Use setFunctionPointer: with func_t 
	argument instead of setFunction: with (void (*)()) argument.

1999-03-17  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m (FCall_c): Rename FCall to FCall_c to avoid name clash
	with new protocol.
	([FCall_c -performCall]): Rename _performAction_: to performCall.

	* FCall.h (FCall_c): Likewise. 

	* defobj.h: Add new protocol FCall.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.h: Include ffi.h.

	* FCall.m: Include misc.h instead of stdlib.h.  Include ffi.h.

	* FArguments.[hm]: Remove include of ffi.h in header file, put
	it in implementation file.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m (fillHiddenArguments): Hide java dependent code.

	* FCall.h (init_javacall_tables): jniEnv is passed as VOID * 
	argument.
	
	* FCall.m ([FCall -createEnd]): Pass correct number of arguments.
	([FCall -_performAction_:]): Pass correct offset of argument 
	values array.
	(init_javacall_tables): Get the jniEnv as an argument.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.h (FArguments): Rename signature to javaSignature and 
	constify.  Rename signatureLength to javaSignatureLength.

	* FArguments.m (createJavaSignature): Constify return and make static.
	([FArguments -createEnd]): Use renamed version.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m ([FCall -getArguments]): New method.

	* FCall.h: Add getArguments method.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (OBJCFLAGS): Append @CFLAGS_NOWARN_UNKNOWN_PRAGMAS@.
	(libdefobj_la_CPPFLAGS): Remove.

	* FArguments.h: Never include jni.h.
	(JOBJECT): Always define as VOID *.

	* FCall.m: Include jni.h if HAVE_JDK.

1999-03-15  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (libdefobj_la_CPPFLAGS): Add 
	CFLAGS_NOWARN_UNKNOWN_PRAGMAS.